[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pretty_debugger"
version = "0.2.1"
authors = [
  { name = "PyCrow" },
]
description = "A Python package for easy and convenient debugging"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Logging",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/PyCrow/pretty_debugger/"
"Bug Tracker" = "https://github.com/PyCrow/pretty_debugger/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pretty_debugger*"]
